DDF-1994 update event sending framework to apply AccessPlugin post query processing to outgoing events